--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
+    "arweave": "^1.15.7",
     "framer-motion": "^12.23.25",
     "next": "16.0.7",
     "pino-pretty": "^13.1.3",
