feat: Implement Token Launchpad with Admin Dashboard and Token-2022 support

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Solana / Anchor
+.anchor
+test-ledger
+target/
+programs/launchpad/target/
+programs/street_sync/target/
